--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 Copyright (C) 2015-2019 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
-* Noteworthy changes in release X.X (library X.X.X) (YYYY-MM-DD) [stable]
+* Noteworthy changes in release 0.9 (library 7.0.0) (2019-04-17) [stable]
 
 ** New features
 
